# openhand_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch
model_o/: model_o.urdf
t42/: t42.urdf
t42/pin_flexure_round/: t42_flexure.urdf  t42_round_finger_BHalf.stl  t42_round_finger_FHalf.stl
t42/pin_pin_round/: t42_round.urdf
t42/pin_pin_std/: t42.urdf
